Revision history for Dist-Metadata

{{$NEXT}}

  [Fixes]
  - Change determine_packages to always return paths in unix format
    (as required by CPAN::Meta::Spec)

  [Enhancements]
  - Include 'xt/' in the default no_index:directory list

  [Documentation]
  - Add items to pod TODO list

0.901     2011-06-22T01:22:07Z

  - Initial release